Fix 'More galleries' articles' text spilling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -126,6 +126,10 @@ button {
 	
 	li {
 		margin-right: 16px;
+		width: 204px;
+	}
+	a {
+		display: block;
 	}
 }
 
